added new ispect slide + cta buttons

--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
 		              <h1 class="ae-2">Entreprenadbesiktning som ökar lönsamheten.</h1>
 									<div class="ae-3"><p>Besiktningsman.se erbjuder för entreprenadbesiktning som ger ett aktivt stöd för sänkt kostnad och ökad lönsamhet i projekt.
 									<br> Ger möjlighet att överlämna ett färdigt projekt med noll byggfel på avtalad dag.</p></div>
+									<a class="common-Button blue text-white">kontakta oss</a>
 		            </li>
 		            <li class="col-6-12 left ae-1 fromRight">
 		              <img class="ipad-32" data-action="zoom" style="width: 1000px;border-radius:6px;" src="assets/img/ispect/stats.png" alt="iPad Image"/>
@@ -222,7 +223,7 @@
 		    </div>
 		  </div>
 		</section>
-<!-- Slide #61 -->
+<!-- Slide #29 -->
 <section class="slide whiteSlide kenBurns">
   <div class="content">
     <div class="container">
@@ -230,39 +231,15 @@
 
         <div class="fix-12-12">
           <ul class="flex verticalCenter">
-            <li class="col-6-12 left ae-1">
-							<a href="">
-								<img class="ipad-32" style="width: 500px;margin-bottom:5px;" src="assets/img/ispect/ipad_front_sv.png" alt="iPad Image"/>
-							</a>
+            <li class="col-5-12 ae-1 cell-29">
+              <img src="assets/img/ispect/ipad_front_sv.png" class="iphone-29" alt="Skärmdump av iSpect"/>
             </li>
-            <li class="col-6-12 left">
-              <h1 class="ae-2" style="font-size:51px;">iSpect ger snabb leverans av besiktningsutlåtandet.</h1>
-              <div class="ae-3">
-                <p>Scene Generator allows you to create your own unique scenes just by dragging and dropping items into a special&nbsp;scene.</p>
+            <li class="col-7-12 left">
+              <h1 class="ae-1 fromLeft">iSpect ger snabb leverans av besiktningsutlåtandet.</h1>
+              <div class="ae-2 fromLeft">
+                <p>iSpect ger direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
               </div>
-              <ul class="flex grid-61 later">
-                <li class="col-6-12 ae-4">
-                  <i class="material-icons">near_me</i>
-                  <h3>Mockup</h3>
-                  <p class="small">Select premade adjustment layers with ease.</p>
-                </li>
-                <li class="col-6-12 ae-5">
-                  <i class="material-icons">voice_chat</i>
-                  <h3>Layers</h3>
-                  <p class="small">Open a smart object, paste your design and save.</p>
-                </li>
-                <li class="col-6-12 ae-6">
-                  <i class="material-icons">account_box</i>
-                  <h3>Branding</h3>
-                  <p class="small">Just select a background, drop items that you like and finalize a scene.</p>
-                </li>
-                <li class="col-6-12 ae-7">
-                  <i class="material-icons">important_devices</i>
-                  <h3>Present</h3>
-                  <p class="small">Create unique items by pasting your design, text, logo or illustration.</p>
-                </li>
-
-              </ul>
+              <a class="common-Button blue text-white">mer om ispect</a>
             </li>
           </ul>
         </div>
