fixed form title, was same as input - also removed zoom function

--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
 		              <h1 class="ae-2">Entreprenadbesiktning som ökar lönsamheten.</h1>
 									<div class="ae-3"><p>Besiktningsman.se erbjuder för entreprenadbesiktning som ger ett aktivt stöd för sänkt kostnad och ökad lönsamhet i projekt.
 									<br> Ger möjlighet att överlämna ett färdigt projekt med noll byggfel på avtalad dag.</p></div>
-									<a class="common-Button blue text-white">kontakta oss</a>
+									<a href="kontakt/" class="common-Button blue text-white">kontakta oss</a>
 		            </li>
 		            <li class="col-6-12 left ae-1 fromRight">
-		              <img class="ipad-32" data-action="zoom" style="width: 1000px;border-radius:6px;" src="assets/img/ispect/stats.png" alt="iPad Image"/>
+		              <img class="ipad-32" style="width: 1000px;border-radius:6px;" src="assets/img/ispect/stats.png" alt="iPad Image"/>
 		            </li>
 		          </ul>
 		        </div>
