--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -196,7 +196,7 @@
 								<input class="stroke left wide" id="email55" type="email" name="yourEmail" placeholder="E-post adress..." required/>
 								<div class="label cropTop"><label class="cropTop left small bold" for="name55">Telefon</label></div>
 								<input class="stroke left wide" id="phone55" type="text" name="yourPhone" placeholder="Telefon nr..." required/>
-								<div class="label"><label class="left small bold" for="message55">Ditt meddelande...</label></div>
+								<div class="label"><label class="left small bold" for="message55">Meddelande</label></div>
 								<textarea class="left " id="message55" type="text" name="yourMessage" placeholder="Ditt meddelande..." required></textarea>
 								<input class="common-Button wide blue cropBottom" type="submit" name="submit" value="Skicka meddelandet" data-success-text="Skickat!" data-success-class="green"/>
 							</form>
