small reference changes

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 </nav>
 
 	<!-- INTRO SLIDE -->
-	<section class="slide fade kenBurns zoomout" data-name="home" id="intro">
+	<section class="slide fade" data-name="home" id="intro">
 		<div class="content">
 			<div class="container" style="height: 760px;">
 				<div class="wrap">
