ton of fixes for the navigation + new bg + header fixes

--- a/index.html
+++ b/index.html
@@ -127,10 +127,9 @@
   <div class="sections desktop">
     <div class="left">
       <ul class="menu crop small bold">
-				<li><a href="#">Mer</a></li>
 				<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
 				<li><a href="nyheter/">Nyheter</a></li>
-
+				<li><a href="om_oss/">Om oss</a></li>
       </ul>
     </div>
     <div class="center"><a href="/"> <img src="assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
@@ -139,7 +138,6 @@
         <li><a href="erbjudande/">Vårt erbjudande</a></li>
         <li><a href="kontakt/">Kontakt</a></li>
         <li><a href="karriar/">Karriär</a></li>
-        <li><a href="om_oss/">Om oss</a></li>
       </ul>
     </div>
   </div>
@@ -155,27 +153,24 @@
   <div class="content">
     <a href="/" class="logo"><img src="assets/svg/bm_logo.svg" alt=""></a>
     <ul class="mainMenu text-blue">
-      <li><a href="#">Vårt erbjudande</a></li>
+      <li><a href="erbjudande/">Vårt erbjudande</a></li>
 			<br>
 			<br>
       <li><a href="kontakt/">Kontakt</a></li>
 			<br>
 			<br>
-			<li><a href="#">Karriär</a></li>
-			<br>
-			<br>
-      <li><a href="om_oss/">Om oss</a></li>
+			<li><a href="karriar/">Karriär</a></li>
 			<br>
 			<br>
     </ul>
     <ul class="subMenu">
-			<li><a href="#">Mer</a></li>
+			<li><a href="om_oss/">Om oss</a></li>
 			<br>
 			<br>
-      <li><a href="#">Blog</a></li>
+      <li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
 			<br>
 			<br>
-			<li><a href="#">Nyheter</a></li>
+			<li><a href="nyheter/">Nyheter</a></li>
     </ul>
 
   </div>
@@ -239,7 +234,7 @@
               <div class="ae-2 fromLeft">
                 <p>iSpect ger direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
               </div>
-              <a class="common-Button blue text-white">mer om ispect</a>
+              <!-- <a class="common-Button blue text-white">mer om ispect</a> -->
             </li>
           </ul>
         </div>
