--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -124,25 +124,24 @@
 <!-- Panel Top #10 -->
 <nav class="panel top forceMobileView white soft-shadow">
   <div class="sections desktop">
-    <div class="left">
-      <ul class="menu crop small bold">
-					<li><a href="../mer/">Mer</a></li>
+	    <div class="left">
+	      <ul class="menu crop small bold">
 					<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
-      </ul>
-    </div>
-    <div class="center"><a href="/"> <img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
-    <div class="right">
-      <ul class="menu crop small bold">
-		      <li><a href="../erbjudande/">Vårt erbjudande</a></li>
-		      <li><a href="../kontakt/">Kontakt</a></li>
-		      <li><a href="../karriar/">Karriär</a></li>
-		      <li><a href="../om_oss/">Om oss</a></li>
-      </ul>
-    </div>
+					<li><a href="../om_oss/">Om oss</a></li>
+	      </ul>
+	    </div>
+	    <div class="center"><a href="/"> <img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
+	    <div class="right">
+	      <ul class="menu crop small bold">
+	        <li><a href="../erbjudande/">Vårt erbjudande</a></li>
+	        <li><a href="../kontakt/">Kontakt</a></li>
+	        <li><a href="../karriar/">Karriär</a></li>
+	      </ul>
+	    </div>
   </div>
   <div class="sections compact hidden">
-    <div class="left"><a href="/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
+    <div class="left"><a href="/"><img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
     <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
   </div>
 </nav>
@@ -162,12 +161,9 @@
 			<li><a href="../karriar/">Karriär</a></li>
 			<br>
 			<br>
-      <li><a href="../om_oss/">Om oss</a></li>
-			<br>
-			<br>
     </ul>
     <ul class="subMenu">
-			<li><a href="../mer/">Mer</a></li>
+			<li><a href="../om_oss/">Om oss</a></li>
 			<br>
 			<br>
       <li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
@@ -186,7 +182,12 @@
     <div class="container">
       <div class="wrap">
 					<h1 class="">Hör gärna av dig!</h1>
-					<div class=""><p>För snabbast assistens så får du gärna fylla i formuläret</p></div>
+					<div class="">
+						<p>
+							Antingen via formuläret nedan <br>eller <br> via telefon:
+							<a href="tel:0101654000" class="bold text-white opacity-10">010-165 40 00</a>
+						</p>
+					</div>
 					<div class="fix-5-12">
 						<div class="pad shadow selected ">
 							<form action="ajax-email.php" id="contact-form" method="post" class="wide center" data-ajax-form="true">
@@ -207,7 +208,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(../assets/img/backgrounds/ispect_close.jpg)"></div>
+  <div class="background" style="background-image:url(../assets/img/backgrounds/coms.jpg)"></div>
 </section>
 
 <section class="slide blue whiteSlide autoHeight customFooter">
