--- a/karriar/index.html
+++ b/karriar/index.html
@@ -124,25 +124,24 @@
 <!-- Panel Top #10 -->
 <nav class="panel top forceMobileView white soft-shadow">
   <div class="sections desktop">
-    <div class="left">
-      <ul class="menu crop small bold">
-					<li><a href="../mer/">Mer</a></li>
+	    <div class="left">
+	      <ul class="menu crop small bold">
 					<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
-      </ul>
-    </div>
-    <div class="center"><a href="/"> <img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
-    <div class="right">
-      <ul class="menu crop small bold">
-		      <li><a href="../erbjudande/">Vårt erbjudande</a></li>
-		      <li><a href="../kontakt/">Kontakt</a></li>
-		      <li><a href="../karriar/">Karriär</a></li>
-		      <li><a href="../om_oss/">Om oss</a></li>
-      </ul>
-    </div>
+					<li><a href="../om_oss/">Om oss</a></li>
+	      </ul>
+	    </div>
+	    <div class="center"><a href="/"> <img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
+	    <div class="right">
+	      <ul class="menu crop small bold">
+	        <li><a href="../erbjudande/">Vårt erbjudande</a></li>
+	        <li><a href="../kontakt/">Kontakt</a></li>
+	        <li><a href="../karriar/">Karriär</a></li>
+	      </ul>
+	    </div>
   </div>
   <div class="sections compact hidden">
-    <div class="left"><a href="/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
+    <div class="left"><a href="/"><img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
     <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
   </div>
 </nav>
@@ -167,7 +166,7 @@
 			<br>
     </ul>
     <ul class="subMenu">
-			<li><a href="../mer/">Mer</a></li>
+			<li><a href="../om_oss/">Om oss</a></li>
 			<br>
 			<br>
       <li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
