--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -124,28 +124,25 @@
 	<!-- Panel Top #10 -->
 	<nav class="panel top forceMobileView white soft-shadow">
 		<div class="sections desktop">
-			<div class="left">
-				<ul class="menu crop small bold">
-					<li><a href="../mer/">Mer</a></li>
+	    <div class="left">
+	      <ul class="menu crop small bold">
 					<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
-				</ul>
-			</div>
-			<div class="center">
-				<a href="/"> <img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
-			</div>
-			<div class="right">
-				<ul class="menu crop small bold">
-		      <li><a href="../erbjudande/">Vårt erbjudande</a></li>
-		      <li><a href="../kontakt/">Kontakt</a></li>
-		      <li><a href="../karriar/">Karriär</a></li>
-		      <li><a href="../om_oss/">Om oss</a></li>
-				</ul>
-			</div>
+					<li><a href="../om_oss/">Om oss</a></li>
+	      </ul>
+	    </div>
+	    <div class="center"><a href="/"> <img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
+	    <div class="right">
+	      <ul class="menu crop small bold">
+	        <li><a href="../erbjudande/">Vårt erbjudande</a></li>
+	        <li><a href="../kontakt/">Kontakt</a></li>
+	        <li><a href="../karriar/">Karriär</a></li>
+	      </ul>
+	    </div>
 		</div>
 		<div class="sections compact hidden">
 			<div class="left">
-				<a href="/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
+				<a href="/"><img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
@@ -166,12 +163,9 @@
 				<li><a href="../karriar/">Karriär</a></li>
 				<br>
 				<br>
-				<li><a href="../om_oss/">Om oss</a></li>
-				<br>
-				<br>
 			</ul>
 			<ul class="subMenu">
-				<li><a href="../mer/">Mer</a></li>
+				<li><a href="../om_oss/">Om oss</a></li>
 				<br>
 				<br>
 				<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
@@ -186,12 +180,13 @@
 	<!-- Slide 1 (#19) -->
 	<section class="slide fade kenBurns" id="intro">
 		<div class="content">
-			<div class="container" style="">
+			<div class="container" style="height: 760px;">
 				<div class="wrap">
-					<h1>Vi på Besiktningsman.se</h1>
-					<p style="margin:0 auto;">Vi är ett fristående besiktningsföretag som utför besiktningar objektivt <br>och opartiskt enligt gällande bygg- och branschregler.</p>
+					<div class="fix-10-12">
+						<h1>Vi på Besiktningsman.se</h1>
+						<p>Vi är ett fristående besiktningsföretag som utför besiktningar objektivt <br>och opartiskt enligt gällande bygg- och branschregler.</p>
+					</div>
 				</div>
-
 			</div>
 		</div>
 		</div>
