updated all the header tags

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -3,47 +3,36 @@
 
 <head>
 	<title>Besiktningsman.se | Nyheter</title>
-	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="keywords" content="besiktningar, syner, bygg, entreprenad, ncc, skanska, jm, icontrol, icontrolapp.se, entreprenör, byggentreprenör, noteringar, dokument, ritningar, projekt, app, byggapp, iphone, ipad, selling solutions, fallstudie, lösningar, en app för byggentreprenörer, översikt, samlingsplats, ispect, ispect-portal, återrapportering, rapportering, felnotering, bygglösningar, lean production, lean startup, startup, construction, industri, besiktning, besiktiga, besikta, entreprenadbesiktning, besiktningsman, fieldlens, fieldwire, plangrid, ritningsapp, i control app, icontroll, icontrollapp, ikontrol, kontroll, arbetsledare, platschef, entreprenadingenjör, bygg app, lean bygg, projekthantering, kommunikation, ireport,">
-	<!-- Page Title -->
+	<meta name="keywords" content="besiktningsman.se, besiktningar, syner, bygg, entreprenad, ncc, skanska, jm, entreprenör, byggentreprenör, noteringar, dokument, ritningar, projekt,
+						fallstudie, lösningar, översikt, samlingsplats, ispect, ispect-portal, återrapportering, rapportering, felnotering, bygglösningar,
+						lean production, lean startup, startup, construction, industri, besiktning, besiktiga, besikta, entreprenadbesiktning, besiktningsman,
+						ritningsapp, kontroll, arbetsledare, platschef, entreprenadingenjör, bygg app, lean bygg, projekthantering, kommunikation,">
+
+	<!-- Making the website social media friendly-->
 	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="http://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
-	<meta property="og:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
+	<meta property="og:title" content="Vi är ett fristående besiktningsföretag som utför besiktningar objektivt och opartiskt enligt gällande bygg- och branschregler." />
+	<meta property="og:description" content="Nyheter från Besiktningsman.se" />
 	<meta property="og:url" content="http://www.besiktningsman.se/" />
-	<meta property="og:site_name" content="Besiktningsman" />
-	<meta name="twitter:card" content="summary" />
+	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
+	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg">
+	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
 	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
-    <!-- Making the website social media friendly-->
-    <meta property="og:image" content="#image">
-    <meta property="og:title" content="Besiktningsman.se | Vi utvecklar och förnyar">
-    <meta property="og:description" content="#yourdescription">
-    <meta property="og:url" content="#yourlink">
-    <meta property="og:site_name" content="besiktningsman.se">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
-
-
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
-
-	<!-- Custom Styles -->
-	<!--link href="css/custom.css" rel="stylesheet" type="text/css"-->
-
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="../js/plugins.js" type="text/javascript" name="plugins"></script>
 	<script src="../js/slides.js" type="text/javascript" name="main-scripts"></script>
-	<!-- Custom Scripts -->
-	<!--script src="js/custom.js" type="text/javascript" name="custom-scripts"></script-->
-
 </head>
 
 <body class="slides scroll simplifiedMobile">
