--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	<link rel="canonical" href="http://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
+	<meta property="og:title" content="Digital besiktning för lönsammare byggprojekt" />
 	<meta property="og:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta property="og:url" content="http://www.besiktningsman.se/" />
 	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
-	<meta property="og:image" content="assets/img/backgrounds/og_image.jpg">
+	<meta property="og:image" content="http://imgur.com/a/6rCJ6">
 	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
 	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
