--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<meta property="og:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta property="og:url" content="http://www.besiktningsman.se/" />
 	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
-	<meta property="og:image" content="http://i.imgur.com/88mHjiJ.jpg">
+	<meta property="og:image" content="assets/img/backgrounds/og_image.jpg" />
 	<meta property="og:image:width" content="1200">
 	<meta property="og:image:height" content="630">
 	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
