--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 <section class="globalFooterCards margin-bottom-8">
 	<div style="max-width: 1040px;" class="container-xl">
-		<a href="#" class="common-Link globalFooterCard soft-shadow white">
+		<a href="http://www.nordbygg.se/" target="_blank" class="common-Link globalFooterCard soft-shadow white">
 			<h2 class="text-white">
 				Möt oss på nordbygg!
 				<p class="text-white opacity-10">Besiktningsman.se har monter på Nordbygg 2017</p>
@@ -185,7 +185,7 @@
 			<div class="img-fade"></div>
 			<img src="assets/img/nyheter/nordbyggbg.jpg" class="" style="width: 100%;border-radius:4px;" />
 		</a>
-		<a href="#" style="margin-left: 10px;" class="common-Link globalFooterCard soft-shadow white">
+		<a href="https://medium.com/besiktningsbloggen" target="_blank" style="margin-left: 10px;" class="common-Link globalFooterCard soft-shadow white">
 			<h2 style="max-width: 66.667%;" class="text-blue bold"></h2>
 			<img src="assets/img/nyheter/byggint.png" />
 		</a>
@@ -203,34 +203,34 @@
           </li>
           <li class="col-5-10 ae-3">
             <h3 class="margin-bottom-1">Kontor</h3>
-            <p class="small"><a href="#">Stockholm</a></p>
-            <p class="small"><a href="#">Helsingborg</a></p>
-            <p class="small"><a href="#">Göteborg</a></p>
-            <p class="small"><a href="#">Norrköping</a></p>
-            <p class="small"><a href="#">Uppsala</a></p>
+            <p class="small"><a href="mailto:info@besiktningsman.se">Stockholm</a></p>
+            <p class="small"><a href="mailto:info@besiktningsman.se">Helsingborg</a></p>
+            <p class="small"><a href="mailto:info@besiktningsman.se">Göteborg</a></p>
+            <p class="small"><a href="mailto:info@besiktningsman.se">Norrköping</a></p>
+            <p class="small"><a href="mailto:info@besiktningsman.se">Uppsala</a></p>
           </li>
           <li class="col-5-10 ae-3">
             <h3 class="margin-bottom-1">Se mer</h3>
-            <p class="small"><a href="#">Om oss</a></p>
-            <p class="small"><a href="#">Karriär</a></p>
-            <p class="small"><a href="#">Nyheter</a></p>
-            <p class="small"><a href="#">Vårt erbjudande</a></p>
-						<p class="small"><a href="#">Kontakt</a></p>
+            <p class="small"><a href="om_oss/">Om oss</a></p>
+            <p class="small"><a href="karriar/">Karriär</a></p>
+            <p class="small"><a href="nyheter/">Nyheter</a></p>
+            <p class="small"><a href="erbjudande/">Vårt erbjudande</a></p>
+						<p class="small"><a href="kontakt/">Kontakt</a></p>
           </li>
           <li class="col-5-10 ae-4">
             <h3 class="margin-bottom-1">Länkar</h3>
-            <p class="small"><a href="mailto:#">Konsumentverket</a></p>
-            <p class="small"><a href="#">SBR</a></p>
-            <p class="small"><a href="#">Boverket - byggregler</a></p>
-            <p class="small"><a href="#">Svensk byggtjänst</a></p>
-            <p class="small"><a href="#">Mäklarsamfundet</a></p>
+            <p class="small"><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
+            <p class="small"><a target="_blank" href="http://sbr.se/">SBR</a></p>
+            <p class="small"><a target="_blank" href="http://www.boverket.se/sv/lag--ratt/">Boverket - byggregler</a></p>
+            <p class="small"><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
+            <p class="small"><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
           </li>
           <li class="col-5-10 ae-5">
             <h3 class="margin-bottom-1">Följ oss</h3>
-            <p class="small"><a href="#">Besiktningsbloggen</a></p>
-            <p class="small"><a href="#">Twitter</a></p>
-            <p class="small"><a href="#">Facebook</a></p>
-            <p class="small"><a href="#">Linkedin</a></p>
+            <p class="small"><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
+            <p class="small"><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
+            <p class="small"><a target="_blank" href="https://www.facebook.com/Besiktningsman/">Facebook</a></p>
+            <p class="small"><a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/">Linkedin</a></p>
           </li>
         </ul>
 
