--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -689,45 +689,45 @@
     </div>
   </div>
 </section>
-<section class="slide blue whiteSlide autoHeight customFooter">
+<section class="slide blue autoHeight customFooter">
   <div class="content">
     <div class="container">
       <div class="wrap">
 
         <ul class="grid fixedSpaces left">
           <li class="col-5-10 wide-col ae-3">
-            <a href="/" class="logo"><img src="../assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
+            <a href="/" class="logo"><img src="assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
           </li>
           <li class="col-5-10 ae-3">
             <h3 class="margin-bottom-1">Kontor</h3>
-            <p class="small"><a href="#">Stockholm</a></p>
-            <p class="small"><a href="#">Helsingborg</a></p>
-            <p class="small"><a href="#">Göteborg</a></p>
-            <p class="small"><a href="#">Norrköping</a></p>
-            <p class="small"><a href="#">Uppsala</a></p>
+            <p class="small"><a href="mailto:info@besiktningsman.se">Stockholm</a></p>
+            <p class="small"><a href="mailto:info@besiktningsman.se">Helsingborg</a></p>
+            <p class="small"><a href="mailto:info@besiktningsman.se">Göteborg</a></p>
+            <p class="small"><a href="mailto:info@besiktningsman.se">Norrköping</a></p>
+            <p class="small"><a href="mailto:info@besiktningsman.se">Uppsala</a></p>
           </li>
           <li class="col-5-10 ae-3">
             <h3 class="margin-bottom-1">Se mer</h3>
-            <p class="small"><a href="#">Om oss</a></p>
-            <p class="small"><a href="#">Karriär</a></p>
-            <p class="small"><a href="#">Nyheter</a></p>
-            <p class="small"><a href="#">Vårt erbjudande</a></p>
-						<p class="small"><a href="#">Kontakt</a></p>
+            <p class="small"><a href="../om_oss/">Om oss</a></p>
+            <p class="small"><a href="../karriar/">Karriär</a></p>
+            <p class="small"><a href="../nyheter/">Nyheter</a></p>
+            <p class="small"><a href="../erbjudande/">Vårt erbjudande</a></p>
+						<p class="small"><a href="../kontakt/">Kontakt</a></p>
           </li>
           <li class="col-5-10 ae-4">
             <h3 class="margin-bottom-1">Länkar</h3>
-            <p class="small"><a href="mailto:#">Konsumentverket</a></p>
-            <p class="small"><a href="#">SBR</a></p>
-            <p class="small"><a href="#">Boverket - byggregler</a></p>
-            <p class="small"><a href="#">Svensk byggtjänst</a></p>
-            <p class="small"><a href="#">Mäklarsamfundet</a></p>
+            <p class="small"><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
+            <p class="small"><a target="_blank" href="http://sbr.se/">SBR</a></p>
+            <p class="small"><a target="_blank" href="http://www.boverket.se/sv/lag--ratt/">Boverket - byggregler</a></p>
+            <p class="small"><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
+            <p class="small"><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
           </li>
           <li class="col-5-10 ae-5">
             <h3 class="margin-bottom-1">Följ oss</h3>
-            <p class="small"><a href="#">Besiktningsbloggen</a></p>
-            <p class="small"><a href="#">Twitter</a></p>
-            <p class="small"><a href="#">Facebook</a></p>
-            <p class="small"><a href="#">Linkedin</a></p>
+            <p class="small"><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
+            <p class="small"><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
+            <p class="small"><a target="_blank" href="https://www.facebook.com/Besiktningsman/">Facebook</a></p>
+            <p class="small"><a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/">Linkedin</a></p>
           </li>
         </ul>
 
