update footer logos on sub pages

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -157,7 +157,7 @@
 
         <ul class="grid fixedSpaces left">
           <li class="col-5-10 wide-col ae-3">
-            <a href="/" class="logo"><img src="assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
+            <a href="/" class="logo"><img src="../assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
           </li>
           <li class="col-5-10 ae-3">
             <h3 class="margin-bottom-1">Kontor</h3>
